--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "bootstrap": "^5.2.0",
     "ngx-img-zoom": "^4.1.2",
     "ngx-spinner": "0.0.0",
+    "ngx-toastr": "^12.0.0",
+    "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
