--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "ngx-spinner": "0.0.0",
     "ngx-toastr": "^12.0.0",
     "ngx-ui-loader": "^13.0.0",
+    "primeng": "^17.12.0",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.10.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
