--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
+    "firebase": "^10.10.0",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-img-zoom": "^4.1.2",
     "ngx-search-filter": "^17.0.0",
