--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
     "firebase": "^10.10.0",
+    "jquery": "^3.7.1",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-img-zoom": "^4.1.2",
     "ngx-search-filter": "^17.0.0",
